--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
-    "author": {
-        "name": "Peter \u0160irka"
-    },
-    "engines": {
-        "node": ">=0.8.0"
-    },
-    "license": "MIT",
-    "main": "./index.js",
-    "name": "firebirdsql",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/petersirka/node-firebirdsql.git"
-    },
-    "version": "0.0.1"
+  "name": "node-firebird",
+  "version": "0.2.0",
+  "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
+  "keywords": [
+    "firebird",
+    "database",
+    "rdbms",
+    "sql"
+  ],
+  "homepage": "https://github.com/hgourvest/node-firebird",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hgourvest/node-firebird"
+  },
+  "author": {
+    "name": "Henri Gourvest",
+    "email": "hgourvest@gmail.com"
+  },
+  "contributors": [
+      "Popa Marius Adrian <mapopa@gmail.com>",
+      "Peter \u0160irka <petersirka@gmail.com>"
+  ],
+  "main": "./lib",
+  "licenses" : [
+    {
+      "type" : "MPL-2.0",
+      "url": "https://raw.githubusercontent.com/hgourvest/node-firebird/master/LICENSE"
+    }
+  ]
 }
