--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-firebird",
+  "name": "firebirdsql",
   "version": "0.2.0",
   "description": "Pure JavaScript and Asynchronous Firebird client for Node.js.",
   "keywords": [
@@ -8,10 +8,10 @@
     "rdbms",
     "sql"
   ],
-  "homepage": "https://github.com/hgourvest/node-firebird",
+  "homepage": "https://github.com/petersirka/firebirdsql",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hgourvest/node-firebird"
+    "url": "https://github.com/petersirka/firebirdsql"
   },
   "author": {
     "name": "Henri Gourvest",
